<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white">

    <ImageView
        android:id="@+id/tvimageView_06"
        android:layout_width="212dp"
        android:layout_height="116dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/watalappan" />

    <TextView
        android:id="@+id/tv_26"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_26"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvimageView_06"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <TextView
        android:id="@+id/tv_27"
        android:layout_width="410dp"
        android:layout_height="91dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_27"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvimageView_06" />

    <TextView
        android:id="@+id/tv_28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tv_28"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_27" />

    <TextView
        android:id="@+id/tv_29"
        android:layout_width="410dp"
        android:layout_height="57dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_29"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_28" />

    <TextView
        android:id="@+id/tv_30"
        android:layout_width="125dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_30"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_29" />

    <TextView
        android:id="@+id/tv_31"
        android:layout_width="394dp"
        android:layout_height="348dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_31"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_30" />

    <Button
        android:id="@+id/tvbackbtn_02"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:text="@string/tvbackbtn_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_31"
        app:layout_constraintVertical_bias="0.727" />


</androidx.constraintlayout.widget.ConstraintLayout>