<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteOrder">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="497dp"
        android:layout_height="1040dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/tv_od01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_od01"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_od"
        android:layout_width="322dp"
        android:layout_height="192dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_od01"
        app:srcCompat="@drawable/dessert" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="379dp"
        android:layout_height="235dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_od">

        <TextView
            android:id="@+id/tv_od02"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/tv_od02"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_od03"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:gravity="center"
            android:text="@string/tv_od03"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_od05"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:gravity="center"
            android:text="@string/tv_od05"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_od04"
        android:layout_width="401dp"
        android:layout_height="75dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_od04"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btn_od01"
        android:layout_width="122dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:text="@string/btn_od01"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_od04"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:id="@+id/btn_od02"
        android:layout_width="122dp"
        android:layout_height="56dp"
        android:text="@string/btn_od02"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toEndOf="@+id/btn_od01"
        app:layout_constraintTop_toBottomOf="@+id/tv_od04"
        app:layout_constraintVertical_bias="0.542" />
</androidx.constraintlayout.widget.ConstraintLayout>