<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDBDB"
    tools:context=".activities.feedback.FeedbackView">


    <TextView
        android:id="@+id/tv_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="Update Feedback"
        android:textColor="#0B0B0B"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="341dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/tv_07"
        android:inputType="textPersonName"
        android:textColor="#100F0F"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_30"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email"
        android:layout_width="343dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/tv_08"
        android:inputType="textPersonName"
        android:textColor="#050505"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name"
        app:layout_constraintVertical_bias="0.465" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="341dp"
        android:layout_height="54dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/tv_09"
        android:inputType="textPersonName"
        android:textColor="#050505"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <TextView
        android:id="@+id/tv_10"
        android:layout_width="341dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_10"
        android:textColor="#101010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <RatingBar
        android:id="@+id/stars_bar"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tvRatingBar_01"
        android:progressBackgroundTint="#FFC400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_10" />

    <TextView
        android:id="@+id/tv_11"
        android:layout_width="349dp"
        android:layout_height="36dp"
        android:text="@string/tv_11"
        android:textColor="#101010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stars_bar"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/description"
        android:layout_width="349dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:background="#8F8A8A"
        android:backgroundTint="#FFFEFE"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/tv_12"
        android:inputType="textMultiLine"
        android:textColor="#0C0C0C"
        android:textColorHint="#878484"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_11"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/tvbtn_05"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:onClick="feedbackUpdate"
        android:text="Update"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/tvbtn_06"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:onClick="feedbackDelete"
        android:text="Delete"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/tv_13"
        android:layout_width="335dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_13"
        android:textColor="#101010"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvbtn_05"
        app:layout_constraintVertical_bias="0.73" />
</androidx.constraintlayout.widget.ConstraintLayout>